--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "get-started-lit-element",
+  "name": "corona-lit",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "d3": "^5.16.0",
     "lit-element": "^2.3.1"
   },
   "devDependencies": {
